--- a/index.html
+++ b/index.html
@@ -1,15 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/column.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <section id="hero">
+        <header class="site-head">
+            <div class="container">
+                <div class="row middle between">
+                    <a href="#" class="logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
+                    <ul class="nav-head-list row middle">
+                        <li class="nav-head-items"><a href="#" class="nav-head-link">FEATURES</a></li>
+                        <li class="nav-head-items"><a href="#" class="nav-head-link">PRICING</a></li>
+                        <li class="nav-head-items"><a href="#" class="nav-head-link">CONTACT</a></li>
+                        <li class="nav-head-items"><a href="#" class="nav-head-link">LOGIN</a></li>
+                    </ul>
+                    <button id="openMenubox" class="head-btn"><i class="bx bx-menu head-burger-icon"></i></button>
+                </div>
+            </div>
+        </header>
+
+        <!-- <div class="site-hero">
+            <div class="container">
+                <div class="row middle">
+                    <div class="hero-inner">
+                        <h1 class="hero-h1">A Simple Bookmark Manager</h1>
+                        <p class="hero-parag">A clean and simple interface to organize your favourite websites. Open a
+                            new browser tab and see your sites load instantly. Try it for free.</p>
+                        <div class="hero-btns-box row middle">
+                            <div class="hero-btns"><a href="#" class="hero-btns-link">Get it on Chrome</a></div>
+                            <div class="hero-btns"><a href="#" class="hero-btns-link">Get it on Firefox</a></div>
+                        </div>
+                    </div>
+                    <img class="hero-img" src="imgs/hero-img.png" alt="hero-img">
+                </div>
+            </div>
+            <img src="./imgs/hero-background-img.svg" alt="hero-background-img" class="hero-background-image">
+        </div>
+    </section>
+    <section class="feature">
+        <div class="container">
+                <div class="feature__inner-box">
+                    <h2 class="feature__title">Features</h2>
+                    <p class="feature__discribtion">Our aim is to make it quick and easy for you to access your
+                        favourite websites. Your bookmarks sync between your devices so you can access them on the go.
+                    </p>
+                    <ul class="feature__list row middle">
+                        <li class="feature__items">Simple Bookmarking</li>
+                        <li class="feature__items">Speedy Searching</li>
+                        <li class="feature__items">Easy Sharing</li>
+                    </ul>
+                </div>
+                <div class="feature__content-box row middle between">
+                    <img src="imgs/feature-img.png" alt="content-img" class="feature__content-img">
+                    <div class="feature__content-inner">
+                        <h2 class="feature__content-title">Bookmark in one click</h2>
+                        <p class="feature__content-discrimbtion">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                        <a href="#" class="feature__content-link">More Info</a>
+                    </div>
+                </div>
+            </div>
+            </section>
+    <section class="extension">
+        <div class="container">
+            <div class="extension__inner">
+                <h2 class="extension__title">Download the extension</h2>
+                <p class="extension__discribtion">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+            </div>
+                <ul class="extension__list row between">
+                    <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img"><h3 class="extension__items-title">Add to Chrome</h3>
+                    <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                    <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img"><h3 class="extension__items-title">Add to Firefox</h3>
+                    <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                    <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img"><h3 class="extension__items-title">Add to Opera</h3>
+                    <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                </ul>
+        </div>
+    </section> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
+
 </body>
+
 </html>
