header-btn added

--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
 <body>
     <section id="hero">
-        <header class="site-head">
+        <header class="site-head">  
             <div class="container">
                 <div class="row middle between">
-                    <a href="#" class="logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
-                    <ul class="nav-head-list row middle">
-                        <li class="nav-head-items"><a href="#" class="nav-head-link">FEATURES</a></li>
-                        <li class="nav-head-items"><a href="#" class="nav-head-link">PRICING</a></li>
-                        <li class="nav-head-items"><a href="#" class="nav-head-link">CONTACT</a></li>
-                        <li class="nav-head-items"><a href="#" class="nav-head-link">LOGIN</a></li>
+                    <a href="#" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
+                    <a href="#" class="site-head__logo-link-resp"><img src="imgs/reponsive-logo.svg" alt="logo" class="logo"></a>
+                    <ul class="site-head__nav-list row middle">
+                        <button id="closeMenubox" class="site-head__btn-closed"><i class="bx bx-x site-head__close-icon"></i></button>
+                        <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">FEATURES</a></li>
+                        <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">PRICING</a></li>
+                        <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">CONTACT</a></li>
+                        <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">LOGIN</a></li>
                     </ul>
-                    <button id="openMenubox" class="head-btn"><i class="bx bx-menu head-burger-icon"></i></button>
+                    <button id="openMenubox" class="site-head__btn"><i class="bx bx-menu site-head__burger-icon"></i></button>
                 </div>
             </div>
         </header>
