--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="row middle between">
                     <a href="#" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
                     
-                    <ul class="site-head__nav-list row middle">
+                    <ul class="site-head__nav-list row middle" id="menubox">
                         <button id="closeMenubox" class="site-head__btn-closed"><i class="bx bx-x site-head__close-icon"></i></button>
                         <a href="#" class="site-head__logo-link-resp"><img src="imgs/reponsive-logo.svg" alt="logo" class="logo"></a>
                         <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">FEATURES</a></li>
@@ -143,6 +143,7 @@
 
    
 
+    <script src="main.js"></script>
 </body>
 
 </html>
