almost redy header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="site-head">  
             <div class="container">
                 <div class="row middle between">
-                    <a href="#" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
+                    <a href="#" id="logo" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
                     
                     <ul class="site-head__nav-list row middle" id="menubox">
                         <button id="closeMenubox" class="site-head__btn-closed"><i class="bx bx-x site-head__close-icon"></i></button>
