HERO FINISHED FOR TRIAL

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="css/column.css">
@@ -32,24 +32,25 @@
             </div>
         </header>
 
-        <!-- <div class="site-hero">
+        <div class="hero">
             <div class="container">
+                <img class="hero__img" src="imgs/hero-img.png" alt="hero-img">
                 <div class="row middle">
-                    <div class="hero-inner">
-                        <h1 class="hero-h1">A Simple Bookmark Manager</h1>
-                        <p class="hero-parag">A clean and simple interface to organize your favourite websites. Open a
+                    <div class="hero__inner">
+                        <h1 class="hero__h1">A Simple Bookmark Manager</h1>
+                        <p class="hero__parag">A clean and simple interface to organize your favourite websites. Open a
                             new browser tab and see your sites load instantly. Try it for free.</p>
-                        <div class="hero-btns-box row middle">
-                            <div class="hero-btns"><a href="#" class="hero-btns-link">Get it on Chrome</a></div>
-                            <div class="hero-btns"><a href="#" class="hero-btns-link">Get it on Firefox</a></div>
+                            <div class="hero__btns-box row middle">
+                                <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Chrome</a></div>
+                                <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Firefox</a></div>
+                            </div>
                         </div>
                     </div>
-                    <img class="hero-img" src="imgs/hero-img.png" alt="hero-img">
                 </div>
-            </div>
-            <img src="./imgs/hero-background-img.svg" alt="hero-background-img" class="hero-background-image">
+                <img src="./imgs/hero-background-img.svg" alt="hero__background-img" class="hero__background-image">
         </div>
     </section>
+    <!--
     <section class="feature">
         <div class="container">
                 <div class="feature__inner-box">
