media screen created

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                 <img src="./imgs/hero-background-img.svg" alt="hero__background-img" class="hero__background-image">
         </div>
     </section>
-    <!--
-    <section class="feature">
+    <!-- <section class="feature">
         <div class="container">
                 <div class="feature__inner-box">
                     <h2 class="feature__title">Features</h2>
@@ -73,23 +72,24 @@
                     </div>
                 </div>
             </div>
-            </section>
-    <section class="extension">
-        <div class="container">
-            <div class="extension__inner">
-                <h2 class="extension__title">Download the extension</h2>
-                <p class="extension__discribtion">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+            <!-- </section>
+            <!--  -->
+        <!-- <section class="extension">
+            <div class="container">
+                <div class="extension__inner">
+                    <h2 class="extension__title">Download the extension</h2>
+                    <p class="extension__discribtion">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
+                </div>
+                    <ul class="extension__list row between">
+                        <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img"><h3 class="extension__items-title">Add to Chrome</h3>
+                        <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                        <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img"><h3 class="extension__items-title">Add to Firefox</h3>
+                        <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                        <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img"><h3 class="extension__items-title">Add to Opera</h3>
+                        <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                    </ul>
             </div>
-                <ul class="extension__list row between">
-                    <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img"><h3 class="extension__items-title">Add to Chrome</h3>
-                    <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
-                    <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img"><h3 class="extension__items-title">Add to Firefox</h3>
-                    <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
-                    <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img"><h3 class="extension__items-title">Add to Opera</h3>
-                    <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
-                </ul>
-        </div>
-    </section> -->
+        </section> --> 
 
 
 
