added feature section with responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <img src="./imgs/hero-background-img.svg" alt="hero__background-img" class="hero__background-image">
         </div>
     </section>
-    <!-- <section class="feature">
+    <section class="feature">
         <div class="container">
                 <div class="feature__inner-box">
                     <h2 class="feature__title">Features</h2>
@@ -72,8 +72,7 @@
                     </div>
                 </div>
             </div>
-            <!-- </section>
-            <!--  -->
+             </section> 
         <!-- <section class="extension">
             <div class="container">
                 <div class="extension__inner">
