added extension section with responsive

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
              </section> 
-        <!-- <section class="extension">
+        <section class="extension">
             <div class="container">
                 <div class="extension__inner">
                     <h2 class="extension__title">Download the extension</h2>
@@ -81,14 +81,17 @@
                 </div>
                     <ul class="extension__list row between">
                         <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img"><h3 class="extension__items-title">Add to Chrome</h3>
-                        <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                        <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
                         <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img"><h3 class="extension__items-title">Add to Firefox</h3>
-                        <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                        <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
                         <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img"><h3 class="extension__items-title">Add to Opera</h3>
-                        <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined"></li>
+                        <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
                     </ul>
             </div>
-        </section> --> 
+        </section> 
 
 
 
