added faq asection

--- a/index.html
+++ b/index.html
@@ -14,20 +14,24 @@
 
 <body>
     <section id="hero">
-        <header class="site-head">  
+        <header class="site-head">
             <div class="container">
                 <div class="row middle between">
-                    <a href="#" id="logo" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo" class="logo"></a>
-                    
+                    <a href="#" id="logo" class="site-head__logo-link"><img src="imgs/logo.svg" alt="logo"
+                            class="logo"></a>
+
                     <ul class="site-head__nav-list row middle" id="menubox">
-                        <button id="closeMenubox" class="site-head__btn-closed"><i class="bx bx-x site-head__close-icon"></i></button>
-                        <a href="#" class="site-head__logo-link-resp"><img src="imgs/reponsive-logo.svg" alt="logo" class="logo"></a>
+                        <button id="closeMenubox" class="site-head__btn-closed"><i
+                                class="bx bx-x site-head__close-icon"></i></button>
+                        <a href="#" class="site-head__logo-link-resp"><img src="imgs/reponsive-logo.svg" alt="logo"
+                                class="logo"></a>
                         <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">FEATURES</a></li>
                         <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">PRICING</a></li>
                         <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">CONTACT</a></li>
                         <li class="site-head__nav-items"><a href="#" class="site-head__nav-link">LOGIN</a></li>
                     </ul>
-                    <button id="openMenubox" class="site-head__btn"><i class="bx bx-menu site-head__burger-icon"></i></button>
+                    <button id="openMenubox" class="site-head__btn"><i
+                            class="bx bx-menu site-head__burger-icon"></i></button>
                 </div>
             </div>
         </header>
@@ -40,111 +44,120 @@
                         <h1 class="hero__h1">A Simple Bookmark Manager</h1>
                         <p class="hero__parag">A clean and simple interface to organize your favourite websites. Open a
                             new browser tab and see your sites load instantly. Try it for free.</p>
-                            <div class="hero__btns-box row middle">
-                                <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Chrome</a></div>
-                                <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Firefox</a></div>
-                            </div>
+                        <div class="hero__btns-box row middle">
+                            <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Chrome</a></div>
+                            <div class="hero__btns"><a href="#" class="hero__btns-link">Get it on Firefox</a></div>
                         </div>
                     </div>
                 </div>
-                <img src="./imgs/hero-background-img.svg" alt="hero__background-img" class="hero__background-image">
+            </div>
+            <img src="./imgs/hero-background-img.svg" alt="hero__background-img" class="hero__background-image">
         </div>
     </section>
     <section class="feature">
         <div class="container">
-                <div class="feature__inner-box">
-                    <h2 class="feature__title">Features</h2>
-                    <p class="feature__discribtion">Our aim is to make it quick and easy for you to access your
-                        favourite websites. Your bookmarks sync between your devices so you can access them on the go.
-                    </p>
-                    <ul class="feature__list row middle">
-                        <li class="feature__items">Simple Bookmarking</li>
-                        <li class="feature__items">Speedy Searching</li>
-                        <li class="feature__items">Easy Sharing</li>
-                    </ul>
+            <div class="feature__inner-box">
+                <h2 class="feature__title">Features</h2>
+                <p class="feature__discribtion">Our aim is to make it quick and easy for you to access your
+                    favourite websites. Your bookmarks sync between your devices so you can access them on the go.
+                </p>
+                <ul class="feature__list row middle">
+                    <li class="feature__items">Simple Bookmarking</li>
+                    <li class="feature__items">Speedy Searching</li>
+                    <li class="feature__items">Easy Sharing</li>
+                </ul>
+            </div>
+            <div class="feature__content-box row middle between">
+                <img src="imgs/feature-img.png" alt="content-img" class="feature__content-img">
+                <div class="feature__content-inner">
+                    <h2 class="feature__content-title">Bookmark in one click</h2>
+                    <p class="feature__content-discrimbtion">Organize your bookmarks however you like. Our simple
+                        drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                    <a href="#" class="feature__content-link">More Info</a>
                 </div>
-                <div class="feature__content-box row middle between">
-                    <img src="imgs/feature-img.png" alt="content-img" class="feature__content-img">
-                    <div class="feature__content-inner">
-                        <h2 class="feature__content-title">Bookmark in one click</h2>
-                        <p class="feature__content-discrimbtion">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
-                        <a href="#" class="feature__content-link">More Info</a>
+            </div>
+        </div>
+    </section>
+    <section class="extension">
+        <div class="container">
+            <div class="extension__inner">
+                <h2 class="extension__title">Download the extension</h2>
+                <p class="extension__discribtion">We've got more browsers in the pipeline. Please do let us know if
+                    you've got a favourite you'd like us to prioritize.</p>
+            </div>
+            <ul class="extension__list row between">
+                <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img">
+                    <h3 class="extension__items-title">Add to Chrome</h3>
+                    <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg"
+                        alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a>
+                </li>
+                <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img">
+                    <h3 class="extension__items-title">Add to Firefox</h3>
+                    <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg"
+                        alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a>
+                </li>
+                <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img">
+                    <h3 class="extension__items-title">Add to Opera</h3>
+                    <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg"
+                        alt="Combined-Shape" class="extension__combined">
+                    <a href="#" class="extension__add-brazers">Add & Install Extension</a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <section class="faq">
+        <div class="container">
+            <div class="faq__inner">
+                <h2 class="faq__title">Frequently Asked Questions</h2>
+                <p class="faq__discribtion">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+            </div>
+            <div class="faq__content-box ">
+                <div class="faq__question-box " id="faqModalbox">
+                    <div class="faq__ques row middle between">
+                        <p class="faq__question">What is Bookmark?</p>
+                    <button class="faq__btn" id="faqModal"><i class="bx bx-chevron-down faq__icon" id="faqIcon"></i></button>
                     </div>
+                    <p class="faq__answer">
+                        Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+                    </p>
+                </div>
+                <div class="faq__question-box " id="faqModalboxfirst">
+                    <div class="faq__ques row middle between">
+                        <p class="faq__question">How can I request a new browser?</p>
+                    <button class="faq__btn" id="faqModalfirst"><i class="bx bx-chevron-down faq__icon" id="faqIconfirst"></i></button>
+                    </div>
+                    <p class="faq__answer">
+                        Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+                    </p>
+                </div>
+                <div class="faq__question-box " id="faqModalboxsecond">
+                    <div class="faq__ques row middle between">
+                        <p class="faq__question">Is there a mobile app?</p>
+                    <button class="faq__btn" id="faqModalsecond"><i class="bx bx-chevron-down faq__icon" id="faqIconsecond"></i></button>
+                    </div>
+                    <p class="faq__answer">
+                        Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+                    </p>
+                </div>
+                <div class="faq__question-box " id="faqModalboxthird">
+                    <div class="faq__ques row middle between">
+                        <p class="faq__question">What about other Chromium browsers?</p>
+                    <button class="faq__btn" id="faqModalthird"><i class="bx bx-chevron-down faq__icon" id="faqIconthird"></i></button>
+                    </div>
+                    <p class="faq__answer">
+                        Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+                    </p>
                 </div>
             </div>
-             </section> 
-        <section class="extension">
-            <div class="container">
-                <div class="extension__inner">
-                    <h2 class="extension__title">Download the extension</h2>
-                    <p class="extension__discribtion">We've got more browsers in the pipeline. Please do let us know if you've got a favourite you'd like us to prioritize.</p>
-                </div>
-                    <ul class="extension__list row between">
-                        <li class="extension__items "><img src="imgs/chrome.svg" alt="Chorme" class="extension__img"><h3 class="extension__items-title">Add to Chrome</h3>
-                        <p class="extension__items-text">Minimum version 62</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
-                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
-                        <li class="extension__items second-box"><img src="imgs/firefox.svg" alt="Path" class="extension__img"><h3 class="extension__items-title">Add to Firefox</h3>
-                        <p class="extension__items-text">Minimum version 55</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
-                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
-                        <li class="extension__items third-box"><img src="imgs/opera.svg" alt="opera" class="extension__img"><h3 class="extension__items-title">Add to Opera</h3>
-                        <p class="extension__items-text">Minimum version 46</p><img src="imgs/Combined-Shape.svg" alt="Combined-Shape" class="extension__combined">
-                    <a href="#" class="extension__add-brazers">Add & Install Extension</a></li>
-                    </ul>
-            </div>
-        </section> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-   
+            <a href="#" class="faq__content-link">More Info</a>
+        </div>
+    </section>
 
     <script src="main.js"></script>
 </body>
