added conact section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,19 @@ ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convall
             <a href="#" class="faq__content-link">More Info</a>
         </div>
     </section>
-
+    <section class="contact">
+        <div class="container">
+            <div class="contact__inner">
+                <p class="contact__about">35,000+ ALREADY JOINED</p>
+                <h3 class="contact__discribtion">Stay up-to-date with what
+we're doing</h3>
+<form action="https://echo.htmlacademy.ru">
+    <input type="email" class="contact__input" name="email" id="email" placeholder="Enter your email address">
+    <button type="submit" class="conatct__sbmit">Contact Us</button>
+</form>
+            </div>
+        </div>
+    </section>
     <script src="main.js"></script>
 </body>
 
